--- a/src/styles/AppStyles.scss
+++ b/src/styles/AppStyles.scss
@@ -125,8 +125,8 @@
     display: none;
   }
 }
-.active {
-  color: yellowgreen;
+.active-link{
+  color: yellowgreen ;
 }
 .city__text {
   font-family: "Teko", sans-serif;
