added basket countera and vuex state

--- a/src/styles/AppStyles.scss
+++ b/src/styles/AppStyles.scss
@@ -126,7 +126,7 @@
   }
 }
 .active-link{
-  color: yellowgreen ;
+  color: yellowgreen !important;
 }
 .city__text {
   font-family: "Teko", sans-serif;
