--- a/src/styles/login/LoginButton.scss
+++ b/src/styles/login/LoginButton.scss
@@ -29,3 +29,11 @@
       text-transform: uppercase;
     }
   }
+  .ExitDrawer{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+  }
